--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="habilidad-bar mb-4">
                         <div class="d-flex justify-content-between mb-1">
-                            <span class="fw-bold">Bootstrap</span>
+                            <span class="fw-bold">Bootstrasp</span>
                             <span>85%</span>
                         </div>
                         <div class="progress" style="height: 16px;">
